# pitwall-ai

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile.base  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: docker-build.yml  lint-test.yml  release.yml
docs/: AI_ARCHITECTURE.md  DATA_MODEL.md  DATA_SOURCES.md  EVENT_MODEL.md  PRD.md  REPLAY_ENGINE.md  SERVICE_CATALOG.md  SYSTEM_CONTEXT.md
docs/adr/: 0001-record-architecture-decisions.md  0002-event-streaming-replay-architecture.md  0002-use-protocol-buffers-for-canonical-events.md  0003-provider-ingestion-architecture.md  0003-use-timescaledb-for-telemetry.md  0004-analytics-engine-architecture.md  0004-separate-prediction-engine-from-ai-reasoning.md  0005-redis-stream-topology.md  0006-database-schema-management.md  0007-strategy-engine-architecture.md  0008-prediction-engine-architecture.md  0009-ai-orchestrator-architecture.md  0010-frontend-api-gateway-architecture.md  README.md
docs/templates/: adr-template.md
frontend/: package-lock.json  package.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/chat/: page.tsx
frontend/src/app/login/: page.tsx
frontend/src/components/: WebSocketProvider.tsx
frontend/src/store/: useStore.ts
libs/common/: pyproject.toml
libs/common/src/pitwall/common/: __init__.py
libs/config/: pyproject.toml
libs/config/src/pitwall/config/: __init__.py
libs/events/: README.md  pyproject.toml
libs/events/proto/: categories.proto  envelope.proto
libs/events/src/: categories_pb2.py  categories_pb2.pyi  envelope_pb2.py  envelope_pb2.pyi
libs/events/src/pitwall/events/: __init__.py  broker.py  metrics.py  models.py  redis_broker.py  validation.py
libs/events/src/pitwall/events/proto/: __init__.py  envelope_pb2.py
libs/events/src/pitwall/events/replay/: __init__.py  clock.py  controller.py
libs/events/tests/: test_clock.py
libs/logging/: pyproject.toml
libs/logging/src/pitwall/logging/: __init__.py
libs/testing/: pyproject.toml
libs/testing/src/pitwall/testing/: __init__.py
scripts/: test_endpoints.ps1
services/ai-orchestrator/: Dockerfile  pyproject.toml
services/ai-orchestrator/scripts/: ingest_rules.py
services/ai-orchestrator/src/pitwall/ai_orchestrator/: __init__.py  agent.py  main.py  rag.py
services/ai-orchestrator/src/pitwall/ai_orchestrator/providers/: __init__.py  base.py  openai_provider.py
services/ai-orchestrator/src/pitwall/ai_orchestrator/tools/: __init__.py  f1_tools.py
services/ai-orchestrator/tests/: test_rag.py  test_tools.py
services/api-gateway/: Dockerfile  pyproject.toml
services/api-gateway/src/pitwall/api_gateway/: auth.py  main.py  websockets.py
services/normalizer/: Dockerfile  pyproject.toml
services/normalizer/src/pitwall/normalizer/: __init__.py  main.py  pipeline.py  publisher.py
services/normalizer/src/pitwall/normalizer/mappers/: __init__.py  fastf1_mapper.py
services/normalizer/tests/: test_fastf1_mapper.py
services/prediction-engine/: Dockerfile  pyproject.toml
services/prediction-engine/src/pitwall/prediction_engine/: cli.py  main.py
services/prediction-engine/src/pitwall/prediction_engine/features/: extractor.py
services/prediction-engine/src/pitwall/prediction_engine/inference/: consumer.py  server.py
services/prediction-engine/src/pitwall/prediction_engine/registry/: __init__.py  models.py  registry.py  session.py
services/prediction-engine/src/pitwall/prediction_engine/training/: evaluator.py  pipeline.py
services/prediction-engine/tests/: test_evaluator.py  test_extractor.py
services/provider-adapter/: Dockerfile  pyproject.toml
services/provider-adapter/src/pitwall/provider_adapter/: __init__.py  api.py  base.py  cache.py  loader.py  main.py  registry.py
services/provider-adapter/src/pitwall/provider_adapter/providers/: fastf1_provider.py
services/provider-adapter/tests/: test_fastf1_provider.py
services/replay-engine/: Dockerfile  pyproject.toml
services/replay-engine/src/pitwall/replay_engine/: __init__.py  api.py  engine.py  main.py  store.py
services/replay-engine/tests/: test_engine.py
services/strategy-engine/: Dockerfile  pyproject.toml
services/strategy-engine/src/pitwall/strategy_engine/: consumer.py  evaluator.py  main.py  publisher.py
services/strategy-engine/src/pitwall/strategy_engine/database/: __init__.py  models.py  session.py
services/strategy-engine/src/pitwall/strategy_engine/simulation/: pit_model.py  simulator.py  traffic_model.py  tyre_model.py
services/strategy-engine/src/pitwall/strategy_engine/state/: race_state_manager.py
services/strategy-engine/tests/: test_simulator.py
services/telemetry-engine/: Dockerfile  pyproject.toml
services/telemetry-engine/src/pitwall/telemetry_engine/: consumer.py  main.py  publisher.py
services/telemetry-engine/src/pitwall/telemetry_engine/processors/: __init__.py  driver_processor.py  lap_processor.py  tyre_processor.py
services/telemetry-engine/src/pitwall/telemetry_engine/timescale/: repository.py  schema.py
services/telemetry-engine/tests/: test_driver_processor.py  test_lap_processor.py
templates/service/: Dockerfile  pyproject.toml
templates/service/src/pitwall/template_service/: main.py
templates/service/tests/: test_main.py
