[project]
name = "pitwall-config"
version = "0.1.0"
description = "PitWall AI - Configuration Library"
requires-python = ">=3.12"
dependencies = [
    "pydantic-settings>=2.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pitwall"]
