[project]
name = "pitwall-events"
version = "0.1.0"
description = "PitWall AI - Protocol Buffer Events"
requires-python = ">=3.12"
dependencies = [
    "pitwall-common",
    "protobuf>=5.27.0",
    "pydantic>=2.7.0",
    "redis>=5.0.0",
    "prometheus-client>=0.19.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pitwall"]

[tool.uv.sources]
pitwall-common = { workspace = true }
