[project]
name = "pitwall-testing"
version = "0.1.0"
description = "PitWall AI - Shared Testing Utilities"
requires-python = ">=3.12"
dependencies = [
    "pytest>=8.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pitwall"]
