[project]
name = "pitwall-ai-orchestrator"
version = "0.1.0"
description = "PitWall AI - AI Orchestrator & RAG Service"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "redis>=5.0.1",
    "qdrant-client>=1.7.0",
    "langchain>=0.1.0",
    "langchain-openai>=0.0.2",
    "requests>=2.31.0",
    "pydantic>=2.0.0",
    "pitwall-common",
    "pitwall-config",
    "pitwall-logging"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pitwall"]

[tool.uv.sources]
pitwall-common = { workspace = true }
pitwall-config = { workspace = true }
pitwall-logging = { workspace = true }
