[project]
name = "pitwall-provider-adapter"
version = "0.1.0"
description = "PitWall AI - Provider Adapter Service"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "redis>=5.0.1",
    "fastf1>=3.3.0",
    "pandas>=2.0.0",
    "tenacity>=8.2.0",
    "prometheus-client>=0.19.0",
    "pitwall-common",
    "pitwall-config",
    "pitwall-logging"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pitwall"]

[tool.uv.sources]
pitwall-common = { workspace = true }
pitwall-config = { workspace = true }
pitwall-logging = { workspace = true }
