[project]
name = "pitwall-strategy-engine"
version = "0.1.0"
description = "PitWall AI - Deterministic Strategy Engine"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "redis>=5.0.1",
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.0",
    "pandas>=2.0.0",
    "pitwall-common",
    "pitwall-config",
    "pitwall-logging",
    "pitwall-events"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pitwall"]

[tool.uv.sources]
pitwall-common = { workspace = true }
pitwall-config = { workspace = true }
pitwall-logging = { workspace = true }
pitwall-events = { workspace = true }
